org_unpackaged/unpackaged/objects/Overview__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Detailed overview of a topic for informational purposes.</description>
    <fields>
        <fullName>Expiration__c</fullName>
        <inlineHelpText>An expiration date for time-sensitive content. If filled, a notification will be sent to article creator near that date.</inlineHelpText>
        <label>Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>Keywords to improve article search.</inlineHelpText>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Articles__c</fullName>
        <description>Related knowledge articles that may inform this article.</description>
        <inlineHelpText>Related knowledge articles that may inform this article.</inlineHelpText>
        <label>Related Articles</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Relevant_Links__c</fullName>
        <description>Links to relevant outside sources.</description>
        <inlineHelpText>Links to relevant outside sources.</inlineHelpText>
        <label>Relevant Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Introduction__c</fullName>
        <description>Introduction of the topic to provide quick summary of what will follow.</description>
        <inlineHelpText>Use this to introduce the topic and provide a quick summary.</inlineHelpText>
        <label>Topic Introduction</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Topic_Overview__c</fullName>
        <description>Overview of the topic.</description>
        <inlineHelpText>Write the topic overview here, providing as much detail as possible.</inlineHelpText>
        <label>Topic Overview</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Overview</label>
    <pluralLabel>Overviews</pluralLabel>
</CustomObject>